--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -5,7 +5,7 @@ body {
     color: #fff;
   }
   
-  .container {
+  .navcontainer {
     display: grid;
     grid-template-rows: auto auto 1fr auto;
     grid-template-columns: 3fr 1fr;
