--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -22,7 +22,7 @@ body {
   }
   
   .nav {
-    background-color: #000;
+    background-color: #c9b22f;
     padding: 20px
   }
   
@@ -35,12 +35,13 @@ body {
   }
   
   .nav ul li {
-    margin: 0 15px;
+    margin: 0 80px;
   }
   
   .nav ul li a {
     text-decoration: none;
     color: #fff;
+    
   }
   
   .main {
@@ -48,6 +49,8 @@ body {
     grid-column: 1 / 2;
     background-color: #999;
     padding: 20px;
+    border-radius: 10px;
+    margin: 10px;
   }
   
   .aside {
@@ -56,6 +59,8 @@ body {
     background-color: #fff;
     color: #000;
     padding: 20px;
+    border-radius: 10px;
+    margin: 10px;
   }
   
   .footer {
@@ -66,3 +71,9 @@ body {
     padding: 10px;
   }
   
+  .aboutme {
+    background-color:#c9b22f;
+    padding:10px;
+    border-radius:10px;
+    text-align:center;
+  }
