--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -50,7 +50,7 @@ body {
     background-color: #999;
     padding: 20px;
     border-radius: 10px;
-    margin: 10px;
+    margin: 20px;
   }
   
   .aside {
@@ -60,7 +60,7 @@ body {
     color: #000;
     padding: 20px;
     border-radius: 10px;
-    margin: 10px;
+    margin: 20px;
   }
   
   .footer {
@@ -77,3 +77,54 @@ body {
     border-radius:10px;
     text-align:center;
   }
+
+  .profile-image {
+    width:300px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px black;
+    margin:30px;
+  }
+
+  .flag-image {
+    width:400px;
+    height:300px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px black;
+    margin:30px;
+  }
+
+  .first-card {
+    display: flex;
+    align-items:center;
+    flex-direction:row; 
+    justify-content: space-between; 
+    padding: 20px;
+  }
+
+  .second-card {
+    margin:50px;
+    display: flex;
+    align-items:center;
+    flex-direction:row-reverse; 
+    justify-content: space-between; 
+    padding: 30px;
+  }
+ .flag-container {
+  
+  display:flex;
+  align-items:center;
+  flex-direction:column;
+  justify-content: space-between; 
+ }
+
+ .city-name {
+  padding-top:10px;
+  border-bottom: 3px solid #2b2929;
+ }
+
+ .page-break {
+  background-color:#c9b22f;
+  padding:10px;
+  border-radius:10px;
+  text-align:center;
+ }
