--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: #333;
     color: #fff;
   }
@@ -58,6 +60,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     margin: 20px;
+    max-width:90%;
+   
   }
   
   .aside {
@@ -66,7 +70,7 @@ body {
     background-color: #999;
     padding: 20px;
     border-radius: 10px;
-    margin: 20px;
+    margin: 10px;
     height:40%;
   }
   
