changed images to webp for better performance, still having problems with hamburger

--- a/week02/styles/temples-large.css
+++ b/week02/styles/temples-large.css
@@ -1,18 +1,19 @@
 @media (max-width: 600px) {
-    .navbar .nav-links {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      right: 0;
-      background-color: #C03221;
-      width: 100%;
-      padding: 10px 0;
-      gap: 10px;
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: #C03221;
+        width: 100%;
+        padding: 10px 0;
+        gap: 10px;
     }
 
-    
+
     .hamburger {
-      display: flex;
+        display: flex;
     }
-  }
+
+}
