--- a/styles/temples.css
+++ b/styles/temples.css
@@ -43,14 +43,16 @@ main {
 }
 
 .footer {
-    grid-row: 4 / 5;
-    grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #C03221;
-    text-align: center;
-    padding: 10px;
     color: #F7F7FF;
     font-size: 1.2rem;
     font-weight: bold;
+    text-align: center;
+    border-top: 5px solid #F7F7FF;
 }
 
 .heading-element {
