changed album to grid

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -61,10 +61,10 @@ main {
 
 
 .album {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-template-rows: repeat(3, auto); 
+    gap: 20px; 
     padding: 20px;
 }
 
