--- a/week03/styles/contry.css
+++ b/week03/styles/contry.css
@@ -5,6 +5,7 @@
 }
 
 
+
 .footer {
     display: flex;
     flex-direction: column;
@@ -23,26 +24,87 @@ header {
     text-align: center;
     padding: 20px;
     background: #009739;
-    color: #fff; 
+    color: #fff;
     font-size: 2rem;
     position: relative;
 }
 
 header::after {
-  content: "";
-  display: block;
-  height: 20px; 
-  background: #2e0b91; 
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    content: "";
+    display: block;
+    height: 20px;
+    background: #2e0b91;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
-.capybara-img{
+
+
+.content {
+    position: relative;
+  }
+  
+  .image-container {
+    position: relative;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .background-image {
     width: 100%;
-    height: 850px;
-    background-image: url('../images/capybara.webp');
-    background-size: cover;
-    background-position: center;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  
+  .data {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .info {
+    top: 20px;
+    left: 20px;
+    width: 200px;
+  }
+  
+  .weather {
+    bottom: 20px;
+    right: 20px;
+    width: 200px;
+  }
+  
+
+  .data-card-header {
+    background-color: #1b794e;
+    color: white;
+    margin: 0px;
+    padding: 10px 15px;
+    position: relative;
+    right:35px;
+    bottom:10px;
+    font-size: 1.2em;
+    font-weight: 500;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.data-card-header-weather {
+    background-color: #1b794e;
+    color: white;
+    margin: 0px;
+    padding: 10px 15px;
+    position: relative;
+    right:35px;
+    bottom:10px;
+    font-size: 1.2em;
+    font-weight: 500;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.data-card-header-weather::after{
+    content:"🌤️";
 }
