--- a/week03/styles/contry.css
+++ b/week03/styles/contry.css
@@ -11,8 +11,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto", serif;
-    color: var(--text-color);
+    color:var(--text-color)
 }
+
+
 
 .footer {
     display: flex;
@@ -24,6 +26,8 @@
     font-weight: bold;
     text-align: center;
 }
+
+
 
 header {
     text-align: center;
@@ -44,58 +48,63 @@ header::after {
     right: 0;
 }
 
+
+
 .content {
     position: relative;
-}
-
-.image-container {
+  }
+  
+  .image-container {
     position: relative;
-    display: flex;
-    gap: 20px;
     height: auto;
     overflow: hidden;
-}
-
-.background-image {
+  }
+  
+  .background-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.data {
+  }
+  
+  
+  .data {
     position: absolute;
-    background: rgba(255, 255, 255, 0.8);
+    background: var(--white);
     padding: 20px;
     border-radius: 10px;
-    font-size: 1.2rem;
+    font-size:1.2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 600px;
     height: 300px;
-    text-align: center;
-}
-
-.info {
+    text-align:center;
+  }
+  
+  .info {
     top: 20px;
     left: 20px;
-}
-
-.weather {
+   
+  }
+  
+  .weather {
     bottom: 20px;
     right: 20px;
-}
+    
+  }
+  
 
-.data-card-header {
+  .data-card-header {
     background-color: var(--primary-color);
     margin: 0px;
     padding: 10px 15px;
     position: relative;
-    right: 35px;
-    bottom: 10px;
+    right:35px;
+    bottom:10px;
     font-size: 1.2em;
     font-weight: 500;
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow)
+    
 }
 
 .data-card-header-weather {
@@ -103,17 +112,17 @@ header::after {
     margin: 0px;
     padding: 10px 15px;
     position: relative;
-    right: 35px;
-    bottom: 10px;
+    right:35px;
+    bottom:10px;
     font-size: 1.2em;
     font-weight: 500;
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow)
 }
 
-.data-card-header-weather::after {
-    content: "🌤️";
+.data-card-header-weather::after{
+    content:"🌤️";
 }
 
-.weather-emoji {
-    display: none;
+.weather-emoji{
+    display:none;
 }
