changed emoji to svg in mobile view

--- a/week03/styles/country-larger.css
+++ b/week03/styles/country-larger.css
@@ -48,12 +48,10 @@
         content:"";
     }
 
-    .weather-emoji{
+    .weather-icon{
         display:flex;
-        text-align:center;
         flex-direction: column;
         justify-content: space-between;
-        font-size:10rem;
     }
 
 
