added filter, animation for cool factor, still deciding color pallete

--- a/week04/styles/temples-large.css
+++ b/week04/styles/temples-large.css
@@ -21,3 +21,13 @@
     }
 
 }
+
+
+@media (min-width: 768px) {
+    #nav-links {
+        display: flex !important;
+        position: static;
+        flex-direction: row;
+        background: none;
+    }
+}
