--- a/week04/styles/temples.css
+++ b/week04/styles/temples.css
@@ -1,11 +1,15 @@
-body {
+html, body {
     margin: 0;
     font-family: "Roboto", serif;
+    height:100%;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
     max-width: 800px;
     margin: 0 auto;
+    flex: 1;
 }
 
 .navbar {
@@ -53,6 +57,7 @@ main {
     font-weight: bold;
     text-align: center;
     border-top: 5px solid #F7F7FF;
+    width:100%;
 }
 
 .heading-element {
@@ -110,4 +115,15 @@ figcaption {
     cursor: pointer;
     gap: 5px;
 
+}
+
+.image-cards{
+    background-color: rgb(213, 221, 212);
+    padding:10px;
+    box-shadow: 0 4px 8px #031927;
+    transition: transform 0.2s;
+}
+
+.image-cards:hover {
+    transform: translateY(-3px);
 }
