--- a/styles/form.css
+++ b/styles/form.css
@@ -42,6 +42,7 @@ label {
     margin-bottom: 0.5rem;
     color: #000;
     font-weight: bold;
+    text-align:center;
 }
 
 select, input[type="date"], input[type="text"], textarea {
@@ -51,6 +52,8 @@ select, input[type="date"], input[type="text"], textarea {
     border-radius: 5px;
     font-size: 1em;
     background-color: white;
+    
+    
 }
 
 .rating {
