--- a/week06/styles/styles.css
+++ b/week06/styles/styles.css
@@ -124,6 +124,13 @@ footer {
     width:100%;
 }
 
+.single-goal {
+    display:flex;
+    padding:10px;
+    gap:20px;
+    
+}
+
 @media (max-width: 768px) {
     .dashboard {
         grid-template-columns: 1fr;
