--- a/week06/styles/signup.css
+++ b/week06/styles/signup.css
@@ -1,3 +1,33 @@
+:root {
+    --federal-blue: #1D3557;
+    --celestial-blue: #457B9D;
+    --persian-blue: #1947D1;
+    --light-gray: #f5f5f5;
+    --white: #ffffff;
+}
+
+main {
+    font-family: "Poppins", sans-serif;
+    background-color: var(--white);
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    min-height: 100vh;
+}
+
+
+footer {
+    margin-top: auto; 
+    background-color: var(--federal-blue); 
+    text-align: center; 
+    padding: 1rem 0; 
+    width: 100%; 
+    position: sticky;
+    bottom: 0;
+    font-weight:bold;
+}
+
+
 .signup-form {
     max-width: 400px;
     margin: 2rem auto;
@@ -6,6 +36,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    height:100%;
 }
 
 .signup-form h2 {
