--- a/week06/styles/styles.css
+++ b/week06/styles/styles.css
@@ -120,6 +120,7 @@ footer {
     text-align: center;
     margin-top: 2rem;
     border-top: 2px solid var(--persian-blue);
+    font-weight:bold;
 }
 
 .single-goal {
