--- a/week06/styles/calculator.css
+++ b/week06/styles/calculator.css
@@ -94,6 +94,13 @@ button:hover {
     font-size: 18px;
 }
 
+#resultrm {
+    margin-top: 1.5rem;
+    font-size: 18px;
+    font-weight:bold;
+    font-size:30px;
+}
+
 #calories {
     font-weight: bold;
     color: var(--persian-blue);
