--- a/week06/styles/calculator.css
+++ b/week06/styles/calculator.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+.rm-result-number {
+    color:var(--persian-blue)
+}
+
 main {
     font-family: "Poppins", sans-serif;
     background-color: var(--white);
