--- a/week06/styles/styles.css
+++ b/week06/styles/styles.css
@@ -203,7 +203,7 @@ footer {
 #weightSave {
     padding: 0.5rem;
     margin-top: 0.5rem;
-    border: 1px solid var(--light-gray);
+    border: 1px solid #ccc;
     border-radius: 4px;
 }
 
